# c_make

./: CMakeLists.txt  compile.bat  hello.c
